[project]
name = "torch-env"
version = "0.1.0"
description = "PyTorch environment with CUDA 12.1 support"
requires-python = ">=3.11,<3.12"
dependencies = [
    # PyTorch with CUDA 12.1 support
    "torch",
    "torchvision",
    "torchaudio",
    "torchtext",
    
    # Data handling and utilities
    "datasets",
    "tokenizers",
    
    # Metrics and monitoring
    "torchmetrics",
    "tensorboard",
    
    # Visualization and experiment tracking
    "altair",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]
torchvision = [
    { index = "pytorch-cu121" },
]
torchaudio = [
    { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 1000

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "notebook>=7.4.5",
]
